--- a/package.json
+++ b/package.json
@@ -16,11 +16,19 @@
 		"@mikro-orm/core": "^4.5.9",
 		"@mikro-orm/migrations": "^4.5.9",
 		"@mikro-orm/postgresql": "^4.5.9",
+		"dotenv": "^10.0.0",
 		"pg": "^8.7.1"
 	},
 	"devDependencies": {
 		"@types/node": "^16.9.6",
 		"nodemon": "^2.0.13",
 		"typescript": "^4.4.3"
+	},
+	"mikro-orm": {
+		"useTsNode": true,
+		"configPaths": [
+			"./src/mikro-orm.config.ts",
+			"./dist/mikro-orm.config.js"
+		]
 	}
 }
