--- a/package.json
+++ b/package.json
@@ -16,11 +16,19 @@
 		"@mikro-orm/core": "^4.5.9",
 		"@mikro-orm/migrations": "^4.5.9",
 		"@mikro-orm/postgresql": "^4.5.9",
+		"apollo-server-express": "^3.3.0",
+		"colors": "^1.4.0",
 		"dotenv": "^10.0.0",
-		"pg": "^8.7.1"
+		"express": "^4.17.1",
+		"graphql": "^15.6.0",
+		"pg": "^8.7.1",
+		"type-graphql": "^1.1.1"
 	},
 	"devDependencies": {
+		"@types/colors": "^1.2.1",
+		"@types/express": "^4.17.13",
 		"@types/node": "^16.9.6",
+		"@types/uuid": "^8.3.1",
 		"nodemon": "^2.0.13",
 		"typescript": "^4.4.3"
 	},
