--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"start": "node ./dist/index",
 		"server": "nodemon ./dist/index",
-		"watch": "tsc -w"
+		"watch": "tsc -w",
+		"migrate": "npx mikro-orm migration:create"
 	},
 	"keywords": [],
 	"author": "",
@@ -17,6 +18,7 @@
 		"@mikro-orm/migrations": "^4.5.9",
 		"@mikro-orm/postgresql": "^4.5.9",
 		"apollo-server-express": "^3.3.0",
+		"bcryptjs": "^2.4.3",
 		"colors": "^1.4.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
@@ -25,6 +27,7 @@
 		"type-graphql": "^1.1.1"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
 		"@types/colors": "^1.2.1",
 		"@types/express": "^4.17.13",
 		"@types/node": "^16.9.6",
