--- a/package.json
+++ b/package.json
@@ -17,20 +17,29 @@
 		"@mikro-orm/core": "^4.5.9",
 		"@mikro-orm/migrations": "^4.5.9",
 		"@mikro-orm/postgresql": "^4.5.9",
+		"@types/cors": "^2.8.12",
+		"apollo-server-core": "^3.3.0",
 		"apollo-server-express": "^3.3.0",
-		"bcryptjs": "^2.4.3",
+		"argon2": "^0.28.2",
 		"colors": "^1.4.0",
+		"connect-redis": "^6.0.0",
+		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"express-session": "^1.17.2",
 		"graphql": "^15.6.0",
 		"pg": "^8.7.1",
+		"redis": "^3.1.2",
 		"type-graphql": "^1.1.1"
 	},
 	"devDependencies": {
-		"@types/bcryptjs": "^2.4.2",
+		"@types/argon2": "^0.15.0",
 		"@types/colors": "^1.2.1",
+		"@types/connect-redis": "0.0.17",
 		"@types/express": "^4.17.13",
+		"@types/express-session": "^1.17.4",
 		"@types/node": "^16.9.6",
+		"@types/redis": "^2.8.32",
 		"@types/uuid": "^8.3.1",
 		"nodemon": "^2.0.13",
 		"typescript": "^4.4.3"
