--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "typeRoots": ["./src/stubs/type-stubs.ts"]
   },
   "exclude": ["node_modules"],
   "include": ["./src/**/*.ts"]
