--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
 	"name": "awad-full-stack",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "index.tsx",
 	"scripts": {
 		"start": "node ./dist/index",
 		"server": "nodemon ./dist/index",
+		"client": "npm run start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
 		"watch": "tsc -w",
 		"migrate": "npx mikro-orm migration:create"
 	},
@@ -13,6 +15,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@emotion/react": "^11.4.1",
+		"@emotion/styled": "^11.3.0",
 		"@mikro-orm/cli": "^4.5.9",
 		"@mikro-orm/core": "^4.5.9",
 		"@mikro-orm/migrations": "^4.5.9",
@@ -27,6 +31,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.2",
+		"framer-motion": "^4.1.17",
 		"graphql": "^15.6.0",
 		"pg": "^8.7.1",
 		"redis": "^3.1.2",
@@ -41,6 +46,7 @@
 		"@types/node": "^16.9.6",
 		"@types/redis": "^2.8.32",
 		"@types/uuid": "^8.3.1",
+		"concurrently": "^6.2.1",
 		"nodemon": "^2.0.13",
 		"typescript": "^4.4.3"
 	},
