--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"gen": "graphql-codegen --config codegen.yml"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -49,6 +50,10 @@
 		]
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "2.2.0",
+		"@graphql-codegen/typescript": "2.2.2",
+		"@graphql-codegen/typescript-operations": "^2.1.4",
+		"@graphql-codegen/typescript-urql": "^3.2.0",
 		"@types/react": "^17.0.24"
 	}
 }
