--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 		"@types/axios": "^0.14.0",
 		"@types/react-dom": "^17.0.9",
 		"@types/react-router-dom": "^5.3.0",
+		"@urql/exchange-graphcache": "^4.3.5",
 		"axios": "^0.21.4",
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
