--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
 		"express-session": "^1.17.2",
 		"framer-motion": "^4.1.17",
 		"graphql": "^15.6.0",
+		"ioredis": "^4.27.9",
+		"nodemailer": "^6.6.5",
 		"pg": "^8.7.1",
-		"redis": "^3.1.2",
-		"type-graphql": "^1.1.1"
+		"type-graphql": "^1.1.1",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"@types/argon2": "^0.15.0",
@@ -43,8 +45,9 @@
 		"@types/connect-redis": "0.0.17",
 		"@types/express": "^4.17.13",
 		"@types/express-session": "^1.17.4",
+		"@types/ioredis": "^4.27.4",
 		"@types/node": "^16.9.6",
-		"@types/redis": "^2.8.32",
+		"@types/nodemailer": "^6.4.4",
 		"@types/uuid": "^8.3.1",
 		"concurrently": "^6.2.1",
 		"nodemon": "^2.0.13",
